--- a/pages/login.html
+++ b/pages/login.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Photo e</title>
+    <title> Login - Photo e</title>
 
     <link rel="stylesheet" href="../css/generalMob.css">
     <link rel="stylesheet" href="../css/generalMqueries.css">
-
     <link rel="stylesheet" href="../css/login-sign.css">
-    <link rel="stylesheet" href="../css/login.css">
-    <link rel="stylesheet" href="../css/loginMqueries.css">
+
+    <link rel="stylesheet" href="../css/c-logpage/login.css">
+    <link rel="stylesheet" href="../css/c-logpage/loginMqueries.css">
 
     <!-- google icons -->
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
